# powerguru

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  config.sub  configure  configure.ac  cross.spec  ltmain.sh  powerguru.sql
client/: Makefile.am  Makefile.in  cmd.cc  threads.cc
daemon/: Makefile.am  Makefile.in  main.cc  threads.cc
debian/: changelog  control  copyright  postinst  powerguru.install  preinst  pypowerguru.install  rules
devices/: Makefile.am  onewire.cc  onewire.h  outbackpower.cc  outbackpower.h  ownet.cc  ownet.h  serial.cc  serial.h  xanbus.cc  xanbus.h  xantrex-trace.cc  xantrex-trace.h
doc/: Doxyfile.in  Makefile.am  Makefile.in
doc/C/: Makefile.am  Makefile.in  outback.xml  pgd-man.xml  powerguru.omf  powerguru.omf.in  powerguru.xml  protocol.xml  tracegui.xml  xantrex.xml
lib/: Makefile.am  Makefile.in  commands.cc  commands.h  console.cc  console.h  database.h  err.cc  err.h  gdb.h  log.cc  log.h  mariadb.cc  menuitem.cc  menuitem.h  msgs.cc  msgs.h  mysql.cc  outbackpower.cc  outbackpower.h  postgresql.cc  proc.cc  proc.h  rc.cc  rc.h  sem.cc  sem.h  serial.cc  serial.h  sharedlib.cc  sharedlib.h  snmp.cc  snmp.h  tcpip.cc  tcpip.h  tcputil.cc  tcputil.h  thread.cc  thread.h  xanbus.cc  (+5 more)
macros/: docbook.m4  gtkextra.m4  mysql.m4  snmp.m4
po/: Makefile.in.in
python/: Makefile.am  chart.py  gpio433.py  gpiots.py  i2c.py  mergedb.py  onewire.py  options.py  ownet.py  pgd.py  pgdb.py  postgresql.py  remote.py  requirements.txt  rtl433.py  rtlsdr.py  sensor.py  setup.py  triggers.py  weather.py
rpm/: powerguru.spec  rpm.am
sim/: Makefile.am  Makefile.in  fakeuart.cc  fakeuart.h  osim.cc
snmp/: Makefile.am  Makefile.in  POWERGURU-MIB.txt  outback.c  outback.h  powerguru.c  powerguru.h  snmp.cc  snmp.h  xantrex.c  xantrex.h
testsuite/: Makefile.am  Makefile.in
testsuite/libtests/: Makefile.am  Makefile.in  childtcpip.cc  cmd-test.cc  db-test.cc  tcp.exp  tcpip-test.cc  tcputil-test.cc  test.xml  xml-test.cc
web/: config.inc.php  control.php  dataminer.php  index.php  plotdata.php  plots.php  support.php  xml.php
